# flimlib

./: .gitignore  .mailmap  .travis.yml  BUILD-Windows.txt  CMakeLists.txt  Environment Variables to compile SLIMCurve C code in Maven using MSVC 2008.txt  LICENSE.txt  MANIFEST.in  README.md  README.txt  appveyor.yml  next-steps.txt  pom.xml  pyproject.toml  release.properties  setup.cfg  setup.py  test.ini  tox.ini
.appveyor/: build.ps1  setup.ps1
.github/: build.sh  deploy.sh
.github/workflows/: build-main.yml  build-pr.yml  build-python.yml  build.yml
.travis/: build.sh  signingkey.asc.enc
CurveFitting/: CurveFitting.1  covsrt.c  expfit.c  expfit.h  fgauss.c  gasdev.c  levmar.h  lm_core.c  main.c  mrqcof.c  mrqmin.c  nr.h  ran1.c
CurveFitting/CurveFitting.xcodeproj/: aivar.mode1v3  aivar.pbxuser  project.pbxproj
CurveFitting/gsl/: lmder.c  lmiterate.c
ECF/: CMakeLists.txt  ecf.h
GrayCode/: EcfGlobal.c  EcfPublic.c  EcfPublic.h  EcfSPA.c  EcfSingle.c  EcfUtil.c  ecf.h
GrayNRCode/: EcfGlobal.c  EcfSingle.c  EcfUtil.c  EcfWrapper.c  EcfWrapper.h
Markwardt/: LibraryWrapper.c  LibraryWrapper.h  mpfit.c  mpfit.h
lib/dll/x64/: slim-curve.lib
lib/dll/x86/: slim-curve.lib
src/flimlib-cmd/c/: main.c
src/flimlib-cmd/c/iniparser/src/: dictionary.c
src/flimlib-cmd/c/iniparser/test/: twisted-genhuge.py
src/flimlib-cmd/cpp/: main.cpp
src/main/assembly/: asm-linux.xml  asm-osx.xml  asm-windows.xml  asm.xml  libs-assembly.xml
src/main/c/: BayesAnalysis.c  BayesAnalysis.h  Doxyfile.dev.txt  Doxyfile.user.txt  Ecf.h  EcfGlobal.c  EcfGlobal.h  EcfGlobal.i  EcfInternal.h  EcfMultiple.c  EcfMultiple.h  EcfSPA.c  EcfSingle.c  EcfUtil.c  EcfWrapper.c  EcfWrapper.h  GCI_Lsqnonneg.c  GCI_Lsqnonneg.h  GCI_Phasor.c  GCI_Phasor.h  GCI_Phasor.i  GCI_PhasorInternal.h  README.txt  SwigWrapperTest.java  cLibrary.i  ecf.h  flimlib.def  loci_curvefitter_SLIMCurveFitter.c  loci_curvefitter_SLIMCurveFitter.h  loci_slim_SLIMCurve.c  loci_slim_SLIMCurve.h  main.c  slim-curve.def  test.ini
src/main/c/bayes/: DTYPE.c  DTYPE.h  bayes_BiExpRapidAnalysis.c  bayes_BiExpRapidAnalysis.h  bayes_DataManagement.c  bayes_DataManagement.h  bayes_DistributionFctsBinLikelihoods.c  bayes_DistributionFctsBinLikelihoods.h  bayes_InstrRspAnalysis.c  bayes_InstrRspAnalysis.h  bayes_Interface.c  bayes_Interface.h  bayes_ModelSelection.c  bayes_ModelSelection.h  bayes_ModelTransformTools.c  bayes_ModelTransformTools.h  bayes_MonoExpAnalysisBinLikelihoods.c  bayes_MonoExpAnalysisBinLikelihoods.h  bayes_MonoExpRapidAnalysis.c  bayes_MonoExpRapidAnalysis.h  bayes_MultiExpAnalysisBinLikelihoods.c  bayes_MultiExpAnalysisBinLikelihoods.h  bayes_MultiExpRapidAnalysis.c  bayes_MultiExpRapidAnalysis.h  bayes_RapidBayesDecayAnalysis.c  bayes_RapidBayesDecayAnalysis.h  bayes_Sizes.h  bayes_Types.h  extmath.c  extmath.h  matrices.c  matrices.h  random.c  random.h  safe_globals.cpp  safe_globals.h
src/main/c/doc/html/: _ecf_8h.html  _ecf_8h_source.html  _ecf_global_8c.html  _ecf_global_8c_source.html  _ecf_s_p_a_8c_source.html  _ecf_single_8c.html  _ecf_single_8c_source.html  _g_c_i___lsqnonneg_8c.html  _g_c_i___lsqnonneg_8c_source.html  _g_c_i___lsqnonneg_8h.html  _g_c_i___lsqnonneg_8h_source.html  _g_c_i___phasor_8c.html  _g_c_i___phasor_8c_source.html  _g_c_i___phasor_8h.html  _g_c_i___phasor_8h_source.html  annotated.html  classes.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  index.html  structglobal__matrix-members.html  structglobal__matrix.html  structglobal__vector-members.html  structglobal__vector.html
src/main/c/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_8.js  classes_0.js  defines_0.js  defines_1.js  enums_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  pages_0.js  search.js
src/main/c/doc/latex/: _ecf_8h.tex  _ecf_global_8c.tex  _ecf_single_8c.tex  _g_c_i___lsqnonneg_8c.tex  _g_c_i___lsqnonneg_8h.tex  _g_c_i___phasor_8c.tex  _g_c_i___phasor_8h.tex  annotated.tex  files.tex  index.tex  refman.tex  structglobal__matrix.tex  structglobal__vector.tex
src/main/cpp/: FittingFunc.h  ParamMatrix.h  decmod.h  fitfunc.h  flimlib.hpp  slim-curve.hpp
src/main/doxygen/: Doxyfile  README.txt
src/main/java/flimlib/: FitFunc.java
src/main/java/loci/slim/: SLIMCurve.java
src/main/java/slim/: FitFunc.java
src/main/matlab/: compileSlimCurve.m  demoSlimCurve.m  mxSlimCurve.c
src/main/python/flimlib/: Ecf.py  __init__.py  cfunc.py  flimlib_dummy.c
src/main/swig/: FLIMLib.i  FLIMLib_1DArray.i  FLIMLib_2DMatrix.i  FLIMLib_DMSPVAF.i  FLIMLib_Enums.i  FLIMLib_FittingFunc.i  FLIMLib_ProgressFunc.i  SLIMCurve.i  SLIMCurve_1DArray.i  SLIMCurve_2DMatrix.i  SLIMCurve_DMSPVAF.i  SLIMCurve_Enums.i  SLIMCurve_FittingFunc.i  SLIMCurve_ProgressFunc.i  makeSwig.sh
src/matlab/: compileFLIMLib.m  compileSlimCurve.m  createDecay.m  demoFLIMLib.m  demoSlimCurve.m  mxFLIMLib.c  mxFLIMLib.m  mxSlimCurve.c  mxSlimCurve.m  replaceANSI.pl
src/slim-curve-cmd/c/: main.c
src/slim-curve-cmd/c/iniparser/src/: dictionary.h
src/slim-curve-cmd/cpp/: main.cpp
src/test-many/c/: test-many.c
src/test/c/: CMakeLists.txt  OldEcf.h  OldEcfGlobal.c  OldEcfSingle.c  README.md  README.txt  ecf.h  json.c  json.h  main.c  output.c  output.h  parser.c  parser.h  strings.h  tests.c  tests.h
src/test/java/flimlib/: FLIMLibJavaTest.java  FLIMLibLoaderTest.java  FLIMLibNativeTest.java
src/test/java/loci/slim/: SLIMCurveTest.java  SwigWrapperTest.java
src/test/java/slim/: SLIMCurveJavaTest.java  SLIMCurveLibLoaderTest.java  SLIMCurveNativeTest.java  SLIMCurveTest.j
src/test/python/: test_flimlib.py
test_files/: abc.json  flimlib-cmd-test.bat  original-old.json  original.json  ref-old.json  ref.json  settings1.ini  settings2.ini  settings3.ini  settings4.ini  settings5.ini  slim-curve-cmd-test.bat  temp.json  test.ini  test.json
tests/: flimlib-cmd-cpp.t  flimlib-cmd.t  flimlib-native-test.t  flimlib-native-test.t.disabled  readme.txt  slim-curve-cmd-cpp.t  slim-curve-cmd.t  slim-curve-native-test.t
