[metadata]
name = flimlib
author = Paul Barber, Curtis Rueden, Kevin Tan
description = A python wrapper for flimlib's C functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flimlib/flimlib
project_urls =
    Bug Tracker = https://github.com/flimlib/flimlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src/main/python
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src/main/python

[bdist_wheel]
py_limited_api = cp36
